Make Qt 5.6.0 the minimum with an override

Qt 5.6 has fixed the bug for which this reverted commit was
a hacky fix; the hacky fix caused problems for kwin because
we first show, then position the main window.

BUG:371568

Revert "Fix wrong positioning of children/popup widgets"

This reverts commit ceff0e241bbd1c14b4b5ee5de11743b92fb7d760.